kubernetes-istio/external-elasticsearch-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: elasticsearch
spec:
  hosts:
  - vpc-stats-from-logs-6-0-xiffda5pw6howr5u6wxxwkkkby.us-east-1.es.amazonaws.com
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-elasticsearch
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: elasticsearch
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-elasticsearch-through-egress-gateway
spec:
  hosts:
  - vpc-stats-from-logs-6-0-xiffda5pw6howr5u6wxxwkkkby.us-east-1.es.amazonaws.com
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: elasticsearch
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: vpc-stats-from-logs-6-0-xiffda5pw6howr5u6wxxwkkkby.us-east-1.es.amazonaws.com
        port:
          number: 80
      weight: 100
